# deepl-api-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
deepl_api/: __init__.py  cli.py  doc_api.md  doc_cli.md  exceptions.py
tests/: test_deepl_api.py  test_deepl_api_cli.py  test_deepl_api_doc.py
